# ESP32-SMU-practice

./: CMakeLists.txt
docs/superpowers/plans/: 2026-07-07-control-web-module.md
main/: CMakeLists.txt  alarm_control.c  alarm_control.h  dht11.c  dht11.h  flame_sensor.c  flame_sensor.h  flame_service.c  flame_service.h  main.c  obstacle_sensor.c  obstacle_sensor.h  obstacle_service.c  obstacle_service.h  pin_config.h  pir_sensor.c  pir_sensor.h  pir_service.c  pir_service.h  system_state.c  system_state.h  temp_humidity.c  temp_humidity.h  temperature_service.c  temperature_service.h  web_server.c  web_server.h
tests/: test_system_state.c
